--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import "bootstrap/dist/css/bootstrap.rtl.min.css";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+@import 'react-toastify/dist/ReactToastify.css'; 
 
 
 @font-face {
@@ -1305,4 +1306,9 @@ a:focus {
     float: left;
     width: 50%;
   }
+}
+
+.Toastify__toast-body {
+  font-family: "Vazir", sans-serif !important;
+  direction: rtl;
 }
